styles/style.css
/* ... */
/* Large screens */
@media (min-width: 1440px) {
    :root {
        --container-padding: 4rem;
    }

    h1 { font-size: 4.5rem; }
    h2 { font-size: 3rem; }
    h3 { font-size: 2.5rem; }

    a { font-size: 1.6rem; }
    p,li { font-size: 1.4rem; }
}

@media (min-width: 1920px) {
    :root {
        --container-padding: 0rem;
        --container-width: 1600px;
    }

    h1 { font-size: 4.5rem; }
    h2 { font-size: 3rem; }
    h3 { font-size: 2rem; }
    h4 {font-size: 1.8rem;}

    a { font-size: 1.6rem; }
    p,li { font-size: 1.4rem; }
}

/* Mobile utilities */
@media (max-width: 767px) {
    .flex {
        flex-direction: column;
    }
}

/* ------------------------------------------------------- COMPONENTS ---------------------------------------------------------------------- */


/* BUTTON */
.btn-primary{
    background: var(--gradient-primary);
    color: var(--color-secondary);
    padding: 1rem 2rem;
    text-align: center;
    max-width: fit-content;
    max-height: 4rem;
    border-radius: var(--radius);
    box-shadow: 1px 1px 3px var(--color-accent-alt),
    -1px -1px 3px var(--color-accent);
    text-decoration: none;
    font-weight: 500;
    text-transform: uppercase;
    text-shadow: 1px 1px 4px var(--color-primary);
}

.section-decor {
    display: flex;
    flex-direction: row;
    margin-bottom: 0.5rem;
}

.section-decor-yellow {
    display: inline-block;
    height: 0.3rem;
    width: 2rem;
    background-color: var(--color-accent-alt);
    transform: skewX(45deg);  /* slants the end like / */
    transform-origin: right top;
}

.section-decor-red {
    display: inline-block;
    height: 0.3rem;
    width: 1.5rem;
    background-color: var(--color-accent);
    transform: skewX(45deg);  /* slants the end like / */
    transform-origin: right top;
}

/* -------------------- Fade In Animation -------------------- */

.fade-in {
    opacity: 0;
    transform: translateY(30px);
    transition: opacity 0.8s ease, transform 0.8s ease;
}

.fade-in.visible {
    opacity: 1;
    transform: translateY(0);
}

/* -------------------------------- CTA ----------------------------------------- */


.banner-wrapper {
  position: relative;
  width: 100%;
  height: 200px; /* Set a fixed height for the banner */
  overflow-x: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
}

.track {
  position: absolute;
  width: 300%;      /* Make them long */
  opacity: 0.2;
  transform: rotate(-10deg) scale(1.2);
  transform-origin: center;
  pointer-events: none;
  z-index: 0;       /* Keep behind the text */
}

/* Push to the top left */
.track-top {
  top: -19%;
  left: -5%;
  transform: rotate(-10deg);
  transform-origin: center;
}

/* Push to the bottom right */
.track-bottom {
  bottom: -30%;
  right: -5%;
  transform: rotate(-10deg);
}

/* Ensure content stays on top of the tracks */
.cta-content {
  position: relative;
  z-index: 1;
  color: var(--color-primary);
  font-weight: 500;
  background-color: #33333363;
  padding: 1rem;
  border-radius: var(--radius);
  text-align: center;
  width: fit-content;
}

.cta-button {
    font-weight: 500;
    text-align: center;
    font-size: 20px;
    gap: 0.5rem;
    margin: 0 auto;
    width: fit-content;
}

.cta-button a {
    text-decoration: none;
    color: var(--color-accent);
}

@media(min-width: 768px) {

    .track {
        width: 86.3%;
    }
    
    /* Push to the top left */
    .track-top {
        top: -88%;
        left: -33%;
    }

    /* Push to the bottom right */
    .track-bottom {
        bottom: -88%;
        right: -34%;
    }

    .cta-button {
        font-size: 22px;
    }

    .cta-button.btn-primary {
        max-width: fit-content;
    }
}

@media(min-width: 1024px) {

    .track {
        width: 56.9%;
    }
    
    /* Push to the top left */
    .track-top {
        top: -73%;
        left: -5%;
    }

    /* Push to the bottom right */
    .track-bottom {
        bottom: -70%;
        right
        : -5%;
    }
}

@media(min-width: 1440px) {

    .track {
        width: 56.9%;
    }
    
    /* Push to the top left */
    .track-top {
        top: -138%;
    }

    /* Push to the bottom right */
    .track-bottom {
        bottom: -104%;
    }
}

@media(min-width: 1920px) {
    .track {
        width: 56.8%;
    }
    
    /* Push to the top left */
    .track-top {
        top: -173%;
    }

    /* Push to the bottom right */
    .track-bottom {
        bottom: -179%;
    }
}

/* ================================================================   NAV CSS ================================================================================= */



.site-nav {
    position: relative;
    z-index: var(--layer-nav);
    background: var(--gradient-primary);
    display: flex;
    width: 100%;
}

.site-nav__container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1600px;
    margin-inline: auto;
    padding-inline: clamp(1rem, 3vw, 4rem);
}


/* -------------------------
   LOGO
------------------------- */
.site-nav__logo {
    height: 90px;
    width: auto;
}

/* ================= NAV STATE ================= */
body.open-nav {
    overflow: hidden;
}

/* -------------------------
   NAV PANEL (MOBILE)
------------------------- */
.site-nav__links {
    position: fixed;
    top: 0;
    right: 0;

    width: 70%;
    height: 100svh;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background: var(--gradient-primary);

    will-change: transform;
    transform: translateX(100%);
    opacity: 0;
    visibility: hidden;
    pointer-events: none;

    transition: transform var(--transition-medium),
                opacity var(--transition-medium),
                visibility 0s;

    z-index: var(--layer-menu);
}

.site-nav__links ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    text-align: center;
    width: 100%;
}
/* ... */

